tests/build/widget/invalid_properties_item.stderr
error: expected `when`, `child` or a property declaration
 --> $DIR/invalid_properties_item.rs:6:9
  |
6 |         {}
  |         ^^
