tests/build/widget/invalid_properties_item.rs
use zero_ui::core::widget;

#[widget($crate::test_widget)]
pub mod test_widget {
    properties! {
        {}
    }
}

fn main() {}
